Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
This is new here:
$ py.test --tb=native pyarrow/tests/test_plasma.py ===================================================================== test session starts ====================================================================== platform linux -- Python 3.6.5, pytest-3.3.2, py-1.5.2, pluggy-0.6.0 rootdir: /home/antoine/arrow/python, inifile: setup.cfg plugins: xdist-1.22.0, timeout-1.2.1, repeat-0.4.1, forked-0.2, faulthandler-1.3.1 collected 23 items pyarrow/tests/test_plasma.py *** Error in `/home/antoine/miniconda3/envs/pyarrow/bin/python': double free or corruption (!prev): 0x0000000001699520 *** [...] Current thread 0x00007fe7e8570700 (most recent call first): File "/home/antoine/arrow/python/pyarrow/tests/test_plasma.py", line 211 in test_connection_failure_raises_exception [...]
Here is the C backtrace under gdb:
#0 0x00007ffff69d0428 in __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:54 #1 0x00007ffff69d202a in __GI_abort () at abort.c:89 #2 0x00007ffff6a127ea in __libc_message (do_abort=do_abort@entry=2, fmt=fmt@entry=0x7ffff6b2bed8 "*** Error in `%s': %s: 0x%s ***\n") at ../sysdeps/posix/libc_fatal.c:175 #3 0x00007ffff6a1b37a in malloc_printerr (ar_ptr=<optimized out>, ptr=<optimized out>, str=0x7ffff6b2c008 "double free or corruption (!prev)", action=3) at malloc.c:5006 #4 _int_free (av=<optimized out>, p=<optimized out>, have_lock=0) at malloc.c:3867 #5 0x00007ffff6a1f53c in __GI___libc_free (mem=<optimized out>) at malloc.c:2968 #6 0x00007fffbdfcc504 in std::_Sp_counted_ptr<plasma::PlasmaClient*, (__gnu_cxx::_Lock_policy)2>::_M_dispose (this=0x9defb0) at /usr/include/c++/4.9/bits/shared_ptr_base.h:373 #7 0x00007fffbdfc903c in std::_Sp_counted_base<(__gnu_cxx::_Lock_policy)2>::_M_release (this=0x9defb0) at /usr/include/c++/4.9/bits/shared_ptr_base.h:149 #8 0x00007fffbdfc82b9 in std::__shared_count<(__gnu_cxx::_Lock_policy)2>::~__shared_count (this=0x7fffc1214510, __in_chrg=<optimized out>) at /usr/include/c++/4.9/bits/shared_ptr_base.h:666 #9 0x00007fffbdfc8276 in std::__shared_ptr<plasma::PlasmaClient, (__gnu_cxx::_Lock_policy)2>::~__shared_ptr (this=0x7fffc1214508, __in_chrg=<optimized out>) at /usr/include/c++/4.9/bits/shared_ptr_base.h:914 #10 0x00007fffbdfc8fc4 in std::shared_ptr<plasma::PlasmaClient>::~shared_ptr (this=0x7fffc1214508, __in_chrg=<optimized out>) at /usr/include/c++/4.9/bits/shared_ptr.h:93 #11 0x00007fffbdfc8fde in __Pyx_call_destructor<std::shared_ptr<plasma::PlasmaClient> > (x=...) at /home/antoine/arrow/python/build/temp.linux-x86_64-3.6/plasma.cxx:281 #12 0x00007fffbdfbc317 in __pyx_tp_dealloc_7pyarrow_6plasma_PlasmaClient (o=0x7fffc12144f0) at /home/antoine/arrow/python/build/temp.linux-x86_64-3.6/plasma.cxx:10383 #13 0x00007fffbdfb8986 in __pyx_pf_7pyarrow_6plasma_2connect (__pyx_self=0x0, __pyx_v_store_socket_name=0x7fffbc922c48, __pyx_v_manager_socket_name=0x7ffff7fa0ab0, __pyx_v_release_delay=0, __pyx_v_num_retries=1) at /home/antoine/arrow/python/build/temp.linux-x86_64-3.6/plasma.cxx:9147 #14 0x00007fffbdfb7dec in __pyx_pw_7pyarrow_6plasma_3connect (__pyx_self=0x0, __pyx_args=0x7fffbc4d9688, __pyx_kwds=0x0) at /home/antoine/arrow/python/build/temp.linux-x86_64-3.6/plasma.cxx:8978
Attachments
Issue Links
- links to