ARROW-2489: [Plasma] Fix PlasmaClient ABI variation

When compiled with GPU support, the PlasmaClient ABI would differ, leading to a crash in the Python bindings to Plasma.

Author: Antoine Pitrou <antoine@python.org>

Closes #1933 from pitrou/ARROW-2489-plasma-client-abi and squashes the following commits:

7d28354f <Antoine Pitrou> ARROW-2489:  Fix PlasmaClient ABI variation